# stockscreener

./: .claudeignore  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  vercel.json
.claude/: settings.json
.github/workflows/: market_open.yml
backend/app/: cache.py  config.py  db.py  logging.py  main.py  supabase_client.py
backend/backtester/: engine.py  models.py
backend/comps/: engine.py  peer_map.py  peer_selector.py
backend/data_providers/: alpaca_client.py  cache.py  edgar_client.py  fmp_client.py  fred_client.py  models.py  sec_xbrl_client.py  yfinance_client.py
backend/exports/: pdf_memo.py  xlsx_writer.py
backend/filings/: conviction_screener.py  conviction_signal.py  data_audit.py  discovery.py  extractor.py  fetcher.py  risk_factors.py  taxonomy.py  thirteenf.py  universe_screener.py
backend/hunter/: engine.py  gate.py  ledger.py  models.py  scouts.py
backend/migrations/: env.py
backend/news/: engine.py
backend/nlp/: equity_researcher.py  models.py  persona.py  risk_analyzer.py  thesis_writer.py
backend/pipeline/: run.py
backend/screener/: dsl.py  engine.py  etf_holdings.py  metrics.py  models_db.py  universe.py
backend/technicals/: engine.py  tv_enrichment.py
backend/tests/: conftest.py  test_backtester.py  test_cache.py  test_comps.py  test_conviction_screener.py  test_data_audit.py  test_derivation.py  test_edgar_client.py  test_exports.py  test_football_field_scenarios.py  test_fred_client.py  test_gap_analysis.py  test_health.py  test_hunter.py  (+10 more)
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
hunter_ledger/: run_003d633f97ab.json
scripts/: dcf_audit.py
(+49 files in other folders)
