[project]
name = "alpha-architect"
version = "0.1.0"
description = "Automated equity research and valuation engine"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.1",
    "arq>=0.26",
    "httpx>=0.27",
    "yfinance>=0.2.50",
    "pandas>=2.2",
    "lxml>=5.0",
    "numpy>=2.1",
    "anthropic>=0.39",
    "xlsxwriter>=3.2",
    "reportlab>=4.2",
    "matplotlib>=3.9",
    "structlog>=24.4",
    "tenacity>=9.0",
    "python-dotenv>=1.0",
    "slowapi>=0.1.9",
    "tradingview-ta>=3.3.0",
    "alpaca-py>=0.43.2",
    "greenlet>=3.4.0",
    "supabase>=2.28.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-redis",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "D"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D203", "D213"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = ["yfinance.*", "xlsxwriter.*", "reportlab.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
addopts = "-ra --strict-markers --cov=backend --cov-report=term-missing"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
